wrapped up NN tuning section

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -15,6 +15,7 @@
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ebk}{EBK}{Empirical Bayes Kriging}
 \newacronym{ep}{E\&P}{Exploration and Production}
+\newacronym{fcn}{FCN}{Fully Connected Network}
 \newacronym{fn}{FN}{False Negative}
 \newacronym{fp}{FP}{False Positive}
 \newacronym{fpr}{FPR}{False Positive Rate}
