--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,42 @@
 
+@misc{brownlee_how_2019,
+	title = {How to {Control} the {Stability} of {Training} {Neural} {Networks} {With} the {Batch} {Size}},
+	url = {https://machinelearningmastery.com/how-to-control-the-speed-and-stability-of-training-neural-networks-with-gradient-descent-batch-size/},
+	abstract = {Neural networks are trained using gradient descent where the estimate of the error used to update the weights is calculated […]},
+	language = {en-US},
+	urldate = {2021-06-30},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = jan,
+	year = {2019},
+}
+
+@article{kingma_adam_2017,
+	title = {Adam: {A} {Method} for {Stochastic} {Optimization}},
+	shorttitle = {Adam},
+	url = {http://arxiv.org/abs/1412.6980},
+	abstract = {We introduce Adam, an algorithm for first-order gradient-based optimization of stochastic objective functions, based on adaptive estimates of lower-order moments. The method is straightforward to implement, is computationally efficient, has little memory requirements, is invariant to diagonal rescaling of the gradients, and is well suited for problems that are large in terms of data and/or parameters. The method is also appropriate for non-stationary objectives and problems with very noisy and/or sparse gradients. The hyper-parameters have intuitive interpretations and typically require little tuning. Some connections to related algorithms, on which Adam was inspired, are discussed. We also analyze the theoretical convergence properties of the algorithm and provide a regret bound on the convergence rate that is comparable to the best known results under the online convex optimization framework. Empirical results demonstrate that Adam works well in practice and compares favorably to other stochastic optimization methods. Finally, we discuss AdaMax, a variant of Adam based on the infinity norm.},
+	urldate = {2021-06-30},
+	journal = {arXiv:1412.6980 [cs]},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	month = jan,
+	year = {2017},
+	note = {arXiv: 1412.6980},
+	keywords = {Computer Science - Machine Learning},
+}
+
+@misc{brownlee_gentle_2017,
+	title = {Gentle {Introduction} to the {Adam} {Optimization} {Algorithm} for {Deep} {Learning}},
+	url = {https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/},
+	abstract = {The choice of optimization algorithm for your deep learning model can mean the difference between good results in minutes, hours, […]},
+	language = {en-US},
+	urldate = {2021-06-30},
+	journal = {Machine Learning Mastery},
+	author = {Brownlee, Jason},
+	month = jul,
+	year = {2017},
+}
+
 @techreport{eia_international_2020,
 	title = {International {Energy} {Outlook} 2020 ({IEO2020})},
 	url = {https://www.eia.gov/outlooks/ieo/},
@@ -2703,7 +2741,7 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-04-14},
 }
 
-@techreport{schochet_development_2001,
+@techreport{schochet_development_2001-1,
 	title = {Development of a {Plan} to {Implement} {Enhanced} {Geothermal} {Systems} ({EGS}) in the {Animas} {Valley}, {New} {Mexico} - {Final} {Report} - 07/26/2000 - 02/01/2001; {FINAL}},
 	url = {http://inis.iaea.org/Search/search.aspx?orig_q=RN:33052100},
 	language = {English},
